--- a/hellorails/app/views/pwa/manifest.json.erb
+++ b/hellorails/app/views/pwa/manifest.json.erb
@@ -1,5 +1,5 @@
 {
-  "name": "RorStuff",
+  "name": "Hellorails",
   "icons": [
     {
       "src": "/icon.png",
@@ -16,7 +16,7 @@
   "start_url": "/",
   "display": "standalone",
   "scope": "/",
-  "description": "RorStuff.",
+  "description": "Hellorails.",
   "theme_color": "red",
   "background_color": "red"
 }
