--- a/demo-blog/app/views/user/show_user_posts.html.erb
+++ b/demo-blog/app/views/user/show_user_posts.html.erb
@@ -30,7 +30,9 @@
       </div>
       <div class="row px-1 justify-content-center">
         <div class="col-md-6 border border-secondary">
-          <p>placeholder</p>
+          <% post.comments.each do |comment| %>
+            <p><strong><%= comment.user.name %>:</strong> <span><%= comment.text %></span></p>
+          <% end %>
         </div>
       </div>
     <% end %>
