--- a/demo-blog/app/views/user/index.html.erb
+++ b/demo-blog/app/views/user/index.html.erb
@@ -1,10 +1,16 @@
+<style>
+  .clickable-row {
+    cursor: pointer; /* Changes cursor to pointer */
+  }
+</style>
+
 <div class="container mt-4">
   <h1 class="text-center mb-4">All Users</h1>
 
   <table class="table table-striped table-bordered">
     <tbody>
       <% @users.each do |user| %>
-        <tr class="row justify-content-between align-items-center">
+        <tr class="row justify-content-between align-items-center clickable-row" data-url="<%= show_user_path(user) %>">
           <!-- Photo column -->
           <td class="col-md-2 text-center">
             <% if user.photo.present? %>
@@ -16,15 +22,25 @@
 
           <!-- User name and posts counter column -->
           <td class="col-md-10 align-items-center">
-              <div class="col-auto fs-1 mr-auto">
-                <strong class="font-weight-bold"> <%= user.name %> </strong>
-              </div>
-              <div class="col-auto text-end">
-                <small class="w-50">Number of Posts: <%= user.posts_counter %></small>
-              </div>
+            <div class="col-auto fs-1 mr-auto">
+              <strong class="font-weight-bold"> <%= user.name %> </strong>
+            </div>
+            <div class="col-auto text-end">
+              <small class="w-50">Number of Posts: <%= user.posts_counter %></small>
+            </div>
           </td>
         </tr>
       <% end %>
     </tbody>
   </table>
 </div>
+
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    document.querySelectorAll(".clickable-row").forEach(row => {
+      row.addEventListener("click", function() {
+        window.location = this.dataset.url;
+      });
+    });
+  });
+</script>
