--- a/demo-blog/app/views/layouts/application.html.erb
+++ b/demo-blog/app/views/layouts/application.html.erb
@@ -35,9 +35,26 @@
               <a class="nav-link active" aria-current="page" href="/">User Index</a>
             </li>
           </ul>
+          <ul class="navbar-nav ms-auto">
+            <% if @current_user %>
+              <li class="nav-item">
+                <span class="navbar-text">Welcome, <%= @current_user.name %>!</span>
+              </li>
+              <li class="nav-item">
+                <%= button_to "Log Out", log_out_path, method: :delete, class: "btn btn-outline-danger ms-2" %>
+              </li>
+            <% else %>
+              <li class="nav-item">
+                <%= link_to "Sign In", sign_in_path, class: "btn btn-outline-success" %>
+              </li>
+            <% end %>
+          </ul>
         </div>
       </div>
     </nav>
+    <% if flash[:notice] %>
+      <div class="alert alert-info"><%= flash[:notice] %></div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
