--- a/demo-blog/app/views/layouts/application.html.erb
+++ b/demo-blog/app/views/layouts/application.html.erb
@@ -35,6 +35,11 @@
               <a class="nav-link active" aria-current="page" href="/">User Index</a>
             </li>
           </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/post/index">Post Index</a>
+            </li>
+          </ul>
           <ul class="navbar-nav ms-auto">
             <% if @current_user %>
               <li class="nav-item">
