--- a/demo-blog/app/views/layouts/application.html.erb
+++ b/demo-blog/app/views/layouts/application.html.erb
@@ -46,6 +46,9 @@
                 <span class="navbar-text">Welcome, <%= @current_user.name %>!</span>
               </li>
               <li class="nav-item">
+                <%= link_to 'Create a Post', new_post_path, class: 'btn btn-outline-secondary mx-1' %>
+              </li>
+              <li class="nav-item">
                 <%= button_to "Log Out", log_out_path, method: :delete, class: "btn btn-outline-danger ms-2" %>
               </li>
             <% else %>
