--- a/demo-blog/app/views/user/show_user_specific_post.erb
+++ b/demo-blog/app/views/user/show_user_specific_post.erb
@@ -20,7 +20,7 @@
         <div class="card-body">
           <!-- Comments List -->
           <div class="mb-5">
-            <% @post.comments.each do |comment| %>
+            <% @post.comments.includes(:user).each do |comment| %>
               <div class="bg-light p-3 rounded mb-2">
                 <p><strong><%= comment.user.name %>:</strong> <%= comment.text %></p>
               </div>
