--- a/demo-blog/app/views/user/show_user.html.erb
+++ b/demo-blog/app/views/user/show_user.html.erb
@@ -2,7 +2,7 @@
   <div class="row my-1 justify-content-center align-items-center">
     <div class="col-md-2">
             <% if @user.photo.present? %>
-              <%= image_tag('profile-pic.png', alt: "#{@user.name}'s photo", class: "img-thumbnail border border-secondary", width: 150, height: 150) %>
+              <%= image_tag('profile-pic.png', alt: "#{@user.name} profile picture", class: "img-thumbnail border border-secondary", width: 150, height: 150) %>
             <% else %>
               <span class="text-muted">No photo</span>
             <% end %>
@@ -29,18 +29,20 @@
   </div>
 
   <div class="container mx-auto">
-    <% post_count = 0 %>
     <% @user.recent_posts.each do |post| %>
       <div class="row my-1 justify-content-center">
         <div class="col-md-6 border border-secondary">
-          <h6 class="text-start">Post Number: <%= post_count + 1 %></h6>
-          <% post_count += 1 %>
+          <h6 class="text-start">Post # <%= post.id %></h6>
           <p class="text-center"> <%= post.text %> </p>
-          <div class="d-flex justify-content-end">
+          <div class="d-flex justify-content-end align-items-center">
+            <small class="text-end mx-1">Comments: <%= post.comments_counter %> Likes: <%= post.likes_counter %></small>
             <%= link_to 'view post', show_user_specific_post_path(@user.id, post.id), class: 'btn btn-outline-secondary mb-1' %>
           </div>
         </div>
       </div>
     <% end %>
+  <div class="row my-1 justify-content-center">
+    <%= link_to 'See All Posts', show_user_posts_path(@user.id, page: 1), class: 'btn btn-outline-secondary mb-1 col-1' %>
+  </div>
   </div>
 </div>
