--- a/demo-blog/app/views/user/show_user_posts.html.erb
+++ b/demo-blog/app/views/user/show_user_posts.html.erb
@@ -1,4 +1,22 @@
 <div class="container mx-auto">
+    <div class="row my-1 justify-content-center align-items-center">
+    <div class="col-md-2">
+            <% if @user.photo.present? %>
+              <%= image_tag('profile-pic.png', alt: "#{@user.name} profile picture", class: "img-thumbnail border border-secondary", width: 150, height: 150) %>
+            <% else %>
+              <span class="text-muted">No photo</span>
+            <% end %>
+    </div>
+    <div class="col-md-5 border border-secondary">
+              <div class="col-auto fs-1 mr-auto">
+                <strong class="font-weight-bold"> <%= @user.name %>'s Posts </strong>
+              </div>
+              <div class="col-auto text-end">
+                <small class="w-50">Number of Posts: <%= @user.posts_counter %></small>
+              </div>
+    </div>
+  </div>
+
   <% @posts.each do |post| %>
     <div class="row mt-4 justify-content-center">
       <div class="col-md-6 border border-secondary">
