--- a/demo-blog/app/views/user/show_user.html.erb
+++ b/demo-blog/app/views/user/show_user.html.erb
@@ -33,6 +33,7 @@
       <div class="row my-1 justify-content-center">
         <div class="col-md-6 border border-secondary">
           <h6 class="text-start">Post # <%= post.id %></h6>
+          <h6 class="text-center"><%= post.title %></h6>
           <p class="text-center"> <%= post.text %> </p>
           <div class="d-flex justify-content-end align-items-center">
             <small class="text-end mx-1">Comments: <%= post.comments_counter %> Likes: <%= post.likes_counter %></small>
