create integration tests for missing user and post views

--- a/demo-blog/app/views/posts/new.html.erb
+++ b/demo-blog/app/views/posts/new.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-8">
-      <h1>Create Post</h1>
-
+      <% if @current_user%>
+        <h1>Create Post</h1>
         <%= form_for(:post, url: { controller: 'posts', action: 'create' }, method: :post) do |form| %>
           <%= form.hidden_field :author, value: @current_user %>
 
@@ -16,7 +16,9 @@
 
           <%= form.submit 'Create Post', class: "btn btn-primary mt-4" %>
         <% end %>
-
+      <% else %>
+        <h1 class="text-center"> You must sign in to create a post <h1>
+      <% end %>
     </div>
   </div>
 </div>
