--- a/demo-blog/app/views/layouts/application.html.erb
+++ b/demo-blog/app/views/layouts/application.html.erb
@@ -41,19 +41,23 @@
             </li>
           </ul>
           <ul class="navbar-nav ms-auto">
-            <% if @current_user %>
+            <% if user_signed_in? %>
               <li class="nav-item">
-                <span class="navbar-text">Welcome, <%= @current_user.name %>!</span>
+                <span class="navbar-text">Welcome, <%= current_user.name %>!</span>
               </li>
               <li class="nav-item">
                 <%= link_to 'Create a Post', new_post_path, class: 'btn btn-outline-secondary mx-1' %>
               </li>
               <li class="nav-item">
-                <%= button_to "Log Out", log_out_path, method: :delete, class: "btn btn-outline-danger ms-2" %>
+                <%= link_to 'Edit Profile', edit_user_registration_path, class: 'btn btn-outline-secondary mx-1' %>
+              </li>
+              <li class="nav-item">
+                <%= button_to "Log Out", destroy_user_session_path, method: :delete, class: "btn btn-outline-danger ms-2" %>
               </li>
             <% else %>
               <li class="nav-item">
-                <%= link_to "Sign In", sign_in_path, class: "btn btn-outline-success" %>
+                <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-outline-success" %>
+                <%= link_to "Sign In", new_user_session_path, class: "btn btn-outline-success" %>
               </li>
             <% end %>
           </ul>
