--- a/demo-blog/app/views/posts/new.html.erb
+++ b/demo-blog/app/views/posts/new.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-8">
-      <% if @current_user%>
+      <% if user_signed_in? %>
         <h1>Create Post</h1>
         <%= form_for(:post, url: { controller: 'posts', action: 'create' }, method: :post) do |form| %>
-          <%= form.hidden_field :author, value: @current_user %>
+          <%= form.hidden_field :author, value: current_user %>
 
           <%= form.label :title, "Post Title" %>
           <%= form.text_field :title, class: "form-control", placeholder: "Enter your post title" %>
