--- a/demo-blog/app/views/layouts/application.html.erb
+++ b/demo-blog/app/views/layouts/application.html.erb
@@ -71,5 +71,7 @@
       <div class="alert alert-info"><%= flash[:alert] %></div>
     <% end %>
     <%= yield %>
+    <!-- Add this before closing </body> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
   </body>
 </html>
