--- a/demo-blog/app/views/user/show_user_specific_post.erb
+++ b/demo-blog/app/views/user/show_user_specific_post.erb
@@ -23,6 +23,9 @@
             <% @post.comments.includes(:user).each do |comment| %>
               <div class="bg-light p-3 rounded mb-2">
                 <p><strong><%= comment.user.name %>:</strong> <%= comment.text %></p>
+                <% if can?(:delete, comment) %>
+                  <%= button_to "Delete Comment", delete_comment_path(comment), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
+                <% end %>
               </div>
             <% end %>
           </div>
